--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
+    "commitizen": "2.8.5",
+    "cz-conventional-changelog": "1.2.0",
     "react-scripts": "0.2.1"
   },
   "dependencies": {
@@ -10,9 +12,13 @@
     "react-dom": "15.2.1"
   },
   "scripts": {
+    "commit": "git-cz",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
+  },
+  "czConfig": {
+    "path": "node_modules/cz-conventional-changelog"
   },
   "eslintConfig": {
     "extends": "./node_modules/react-scripts/config/eslint.js"
