--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
-  "czConfig": {
-    "path": "node_modules/cz-conventional-changelog"
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   },
   "eslintConfig": {
     "extends": "./node_modules/react-scripts/config/eslint.js"
