--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "react-scripts": "0.2.1"
   },
   "dependencies": {
+    "aphrodite": "0.5.0",
+    "normalize.css": "4.2.0",
     "react": "15.2.1",
     "react-dom": "15.2.1"
   },
